--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.1",
+    "react-router-dom": "^7.1.3",
+    "react-router-hash-link": "^2.4.3",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
