--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bytesites",
+  "name": "business",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -40,7 +40,9 @@
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
+    "rollup-plugin-visualizer": "^5.14.0",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.7"
+    "vite": "^6.0.7",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
