--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroui/navbar": "^2.2.9",
+    "@heroui/button": "^2.2.16",
+    "@heroui/dropdown": "^2.3.16",
+    "@heroui/link": "^2.2.13",
+    "@heroui/navbar": "^2.2.14",
+    "@heroui/system": "^2.4.12",
+    "@heroui/theme": "^2.4.12",
     "bootstrap-icons": "^1.11.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.10",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.3",
     "react": "^18.3.1",
