--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.3",
     "react-router-hash-link": "^2.4.3",
+    "react-toastify": "^11.0.5",
     "react-transition-group": "^4.4.5",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
